--- a/index.htm
+++ b/index.htm
@@ -11,6 +11,7 @@
 
 <body>
     <canvas id="canvas"></canvas>
+    <script src="sensor.js"></script>
     <script src="utils.js"></script>
     <script src="road.js"></script>
     <script src="controls.js"></script>
